# MyPythonPackage

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: build-test.yml  codeql.yml  hello.yml  test-matrix.yml
docs/: conf.py  index.rst
src/imppkg/: harmonic_mean.py  harmonic_mean_c.pyx  harmony.py
test/: test_harmonic_mean.py
