[metadata]
name = my_python_package
version = 0.0.1
url = https://github.com/cindytsai/MyPythonPackage
author = Shin-Rong Tsai
author_email = "Shin-Rong Tsai" <turquoisea.tsai@gmail.com>
description = This is my first python package.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers = License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.9

[options.packages.find]
where=src
exclude =
    test*

[options.entry_points]
console_scripts =
    harmony = imppkg.harmony:main