[metadata]
name = my_python_package
version = 0.0.1
url = https://github.com/cindytsai/MyPythonPackage
author = Shin-Rong Tsai
author_email = "Shin-Rong Tsai" <turquoisea.tsai@gmail.com>
description = This is my first python package.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers = License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    termcolor>=2.0.0,<3

[options.packages.find]
where=src
exclude =
    test*

[options.entry_points]
console_scripts =
    harmony = imppkg.harmony:main


[tool:pytest]
# find test in testpaths
testpaths =
    test
# run pytest --cov by default without specifying --cov (--no-cov in reverse)
addopts = --cov

[coverage:run]
# run branch test
branch = True

# set pytest --cov=imppkg
source =
    imppkg

[coverage:paths]
# simplify the output path, the first entry will replace the following
source =
    src/imppkg/
    */site-packages/imppkg/

[coverage:report]
# show missing lines that aren't tested
show_missing = True

# skip fully covered file
skip_covered = True


[tox:tox]
isolated_build = True

# env to test
envlist = py310, py39

[testenv]
# dependencies in tox env
deps =
    pytest
    pytest-cov
commands =
    pytest {posargs}
